--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,11 +4,26 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* HEADINGS */
+
 .header--main {
   font-weight: normal;
   font-size: 50px;
   color: #FFFFFF;
 }
+
+.header--secondary {
+  font-weight: 300;
+  font-size: 42px;
+  color: #FFFFFF;
+}
+
+.header--subtitle {
+  font-size: 21px;
+  color: grey;
+}
+
+/* LINKS */
 
 .link--cta {
   font-size: 16px;
