--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,3 +29,11 @@ body {
   font-size: 16px;
   color: aquamarine;
 }
+
+/* FOOTER */
+
+.footer {
+  text-align: right;
+  font-size: 21px;
+  color: grey;
+}
